# shopping_list

./: .env.example  alembic.ini  pyproject.toml
backend/: main.py
backend/api/handlers/controllers/: group.py  user.py
backend/api/handlers/routers/: group.py  user.py
backend/api/schemas/: group.py  user.py
backend/config/settings/: db.py
backend/db/: sessions.py
backend/db/dals/: group.py  user.py
backend/db/models/: group.py  user.py
migrations/: env.py
migrations/versions/: 6551900c3104_create_user.py  9439a12daf16_group_member_add_default_id.py  ad5ead2aa5f4_group_member_add_fk.py  ffb841d6fbd3_create_user.py
